# pattern_manager_behavior_tree

./: .rosinstall  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
include/pattern_manager_behavior_tree/: conversions.h
include/pattern_manager_behavior_tree/actions/: Filename.h  FilenameServiceNode.h  GetCurrentId.h  GetCurrentIdServiceNode.h  GetTransformId.h  GetTransformIdServiceNode.h  GetTransformName.h  GetTransformParams.h  SetActive.h  SetActiveServiceNode.h  Trigger.h  TriggerServiceNode.h
test/: pattern_manager.test  pattern_manager_test.cpp  rosconsole.conf
test/bt_trees/: pattern_manager_tree.xml
test/config/: pattern.yaml
